# linguado

./: .gitignore  README.md  linguado.py  pyproject.toml  requirements.txt
linguado/: ast_generator.py  graph_calculations.py  main.py  sample_generator.py  weisfeiler_lehman.py  writer.py
linguado/c/: CListener.py  CParser.py
linguado/javascript/: JavaScriptLexer.g4  JavaScriptLexer.py  JavaScriptParser.g4  JavaScriptParser.interp  JavaScriptParser.py  JavaScriptParserListener.py
linguado/nasm_x86_64/: nasm_x86_64_Lexer.interp  nasm_x86_64_Lexer.py  nasm_x86_64_Parser.g4  nasm_x86_64_Parser.py
linguado/php/: PhpLexer.py  PhpParser.py  PhpParserListener.py
linguado/python2/: Python2.interp  Python2Lexer.py  Python2Listener.py  Python2Parser.py
linguado/python3/: Python3Lexer.g4  Python3Lexer.interp  Python3Lexer.py  Python3Listener.py  Python3Parser.py
linguado/vba/: vba.interp  vbaLexer.interp  vbaLexer.py  vbaLexer.tokens  vbaListener.py  vbaParser.py
src/linguado/: __init__.py  linguado.py  sample.py
src/linguado.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/linguado/c/: C.interp  CLexer.py
src/linguado/javascript/: JavaScriptLexer.g4  JavaScriptLexer.interp  JavaScriptParser.g4  JavaScriptParser.interp  JavaScriptParser.tokens
src/linguado/nasm_x86_64/: nasm_x86_64_Lexer.g4  nasm_x86_64_Lexer.tokens  nasm_x86_64_Parser.interp  nasm_x86_64_ParserListener.py
src/linguado/php/: PhpLexer.g4
src/linguado/python2/: Python2Lexer.interp  Python2Lexer.py  Python2Listener.py
src/linguado/python3/: Python3LexerBase.py  Python3Parser.g4
src/linguado/vba/: vbaLexer.interp  vbaListener.py
